force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Base_Plan__c.field-meta.xml
<CustomField>
    <fullName>Base_Plan__c</fullName>
    <label>Base Plan</label>
    <type>TextArea</type>
</CustomField>