force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Order</label>
    <referenceTo>Carrier_Order__c</referenceTo>
    <relationshipLabel>QA Lines Of Coverage</relationshipLabel>
    <relationshipName>QA_Lines_Of_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>