force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Carrier_Wiki__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Wiki__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Wiki</label>
    <type>TextArea</type>
</CustomField>