force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Carriers__c.field-meta.xml
<CustomField>
    <fullName>Carriers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carriers</label>
    <length>80</length>
    <type>Text</type>
</CustomField>