force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>