force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Contribution_change__c.field-meta.xml
<CustomField>
    <fullName>Contribution_change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contribution change</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>