force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Contribution_for_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Contribution_for_Dependents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contribution for Dependents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>