force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Documents_Require_for_Submission__c.field-meta.xml
<CustomField>
    <fullName>Documents_Require_for_Submission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents Required for Submission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>