force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Number(Beam Only)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>