force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Lines_Of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Lines_Of_Coverage__c</fullName>
    <label>Lines Of Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>DCA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>