force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Participation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Participation_Requirements__c</fullName>
    <label>Participation Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>