force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Schedule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Schedule(Beam Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>