force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Plan_changes__c.field-meta.xml
<CustomField>
    <fullName>Plan_changes__c</fullName>
    <description>pulled from benefit-specific qual_loc_data values on qa_sheet_info, indicates whether the plan is changing from the previous plan year</description>
    <label>Plan change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>