force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/QA_Sheet__c.field-meta.xml
<CustomField>
    <fullName>QA_Sheet__c</fullName>
    <label>QA Sheet</label>
    <referenceTo>QA_Sheet__c</referenceTo>
    <relationshipLabel>QA Lines Of Coverage</relationshipLabel>
    <relationshipName>QA_Lines_Of_Coverage_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>