force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change__c</fullName>
    <label>Rating Structure Change?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>