force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Submission_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submission_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>