force-app/main/default/objects/QA_Lines_Of_Coverage__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>